--- a/home/css/style.css
+++ b/home/css/style.css
@@ -6,7 +6,7 @@
 	margin: 0;
 }
 body {
-    background-image: url("andrewfpetersen.github.io/home/images/Hero.jpg");
+    background-image: url("https://andrewfpetersen.github.io/home/images/Hero.jpg");
     background-size: cover;
     font-family: 'Roboto', sans-serif;
     color: #fff;
